--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -176,12 +176,12 @@ jobs:
           ctest -O ctest.log --output-on-failure -E "${{ matrix.ctest_exclude_pattern }}"
 
   test-generic-job:
-    runs-on: [self-hosted, linux, hpc-dev]
+    runs-on: [self-hosted, linux, hpc]
     steps:
       - uses: ecmwf-actions/reusable-workflows/ci-hpc-generic@v2
         with:
           site: ac
-          troika_user: ${{ secrets.HPC_DEV_CI_SSH_USER }}
+          troika_user: ${{ secrets.HPC_CI_SSH_USER }}
           template: |
             echo "Hello {{ name }}!"
             echo "{{ foo.bar }}"
