--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,8 @@ endif()
 ecbuild_add_option( FEATURE HDF5
     DESCRIPTION "Use HDF5 to read input and reference data"
     REQUIRED_PACKAGES "HDF5 COMPONENTS Fortran C"
+    # REQUIRED_PACKAGES "HDF5 COMPONENTS Fortran"
+    # REQUIRED_PACKAGES "HDF5 COMPONENTS Fortran"
     DEFAULT ON )
 if( HAVE_HDF5 )
     list(APPEND CLOUDSC_DEFINITIONS HAVE_HDF5 )
