--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -97,6 +97,15 @@ frontend = 'FP'
   classname = 'IdemTransformation'
   module = 'loki.transformations'
 
+[transformations.DuplicateKernel]
+  classname = 'DuplicateKernel'
+  module = 'loki.transformations.parametrise'
+  options = {kernels = 'cloudsc_init'}
+
+[transformations.RemoveKernel]
+  classname = 'RemoveKernel'
+  module = 'loki.transformations.parametrise'
+  options = {kernels = 'cloudsc_init'}
 
 [transformations.SCA]
   classname = 'ExtractSCATransformation'
@@ -189,7 +198,7 @@ frontend = 'FP'
 [pipelines]
 
 [pipelines.idem]
-  transformations = ['Idem', 'ModuleWrap', 'Dependency']
+  transformations = ['Idem', 'DuplicateKernel', 'ModuleWrap', 'Dependency']
 
 [pipelines.idem-stack]
   transformations = ['Idem', 'Sanitise', 'Stack', 'ModuleWrap', 'Dependency']
